--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,11 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/medical-icon.svg" />
+    <meta name="description" content="의료 종사자를 위한 환자 진료 상황 음성 대화 연습 시스템" />
+    <meta name="keywords" content="의료, 진료, 대화 연습, 음성 인터랙션, 의료 교육" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NK Voice App - 제곱 계산기</title>
+    <title>의료 대화 연습 시스템</title>
   </head>
   <body>
     <div id="root"></div>
